--- a/src/components/snippets/message/message.liquid
+++ b/src/components/snippets/message/message.liquid
@@ -3,4 +3,4 @@
     <input type='text' name='message' id='messageid' value="test" action="javascript:messageFunction()" />
 </div>
 
-<script src="{{ 'bundle.snippets.js' | asset_url }}"></script>
+<script src="{{ 'bundle.message.js' | asset_url }}"></script>
