footer example finished

--- a/src/components/sections/footer/footer.liquid
+++ b/src/components/sections/footer/footer.liquid
@@ -1,64 +1,70 @@
-<footer>
-  {%- assign footer_linklist = section.settings.footer_linklist -%}
-  {% if linklists[footer_linklist].links.size > 0 %}
-    <ul>
-      {% for link in linklists[footer_linklist].links %}
-        <li><a href="{{ link.url }}">{{ link.title }}</a></li>
-      {% endfor %}
-    </ul>
-  {% endif %}
-
-  <div>
-    <small>&copy; {{ 'now' | date: "%Y" }}, {{ shop.name | link_to: '/' }}. {{ powered_by_link }}</small>
-  </div>
-</footer>
-
 <footer class="footer relative pt-1 border-b-2">
-    <div class="container mx-auto px-6">
-
-        <div class="sm:flex sm:mt-8">
-            <div class="mt-8 sm:mt-0 sm:w-full sm:px-8 flex flex-col md:flex-row justify-between">
-                <div class="flex flex-col">
-                  {% if section.settings.first_menu_enable %}
-                    <span class="font-bold text-gray-700 uppercase mb-2">{{ section.settings.first_title }}</span>
-                    {% if linklists[footer_linklist].links.size > 0 %}
-                      {%- assign first_linklist = section.settings.first_linklist -%}
-                      {% for link in linklists[footer_linklist].links %}
-                        <span class="my-2">
-                          <a href="{{ link.url }}" class=" text-md">{{ link.title }}</a>
-                        </span>
-                      {% endfor %}
-                    {% else %}
-                      <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
-                      <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
-                      <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
-                    {% endif %}
-                  {% endif %}
-                </div>
-                <div class="flex flex-col">
-                    <span class="font-bold text-gray-700 uppercase mt-4 md:mt-0 mb-2">Footer header 2</span>
-                    <span class="my-2"><a href="#" class="text-md">link 1</a></span>
-                    <span class="my-2"><a href="#" class="text-md">link 1</a></span>
-                    <span class="my-2"><a href="#" class="text-md">link 1</a></span>
-                </div>
-                <div class="flex flex-col">
-                    <span class="font-bold text-gray-700 uppercase mt-4 md:mt-0 mb-2">Footer header 3</span>
-                    <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
-                    <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
-                    <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
-                </div>
-            </div>
+  <div class="container mx-auto px-6">
+    <div class="sm:flex sm:mt-8">
+      <div class="mt-8 sm:mt-0 sm:w-full sm:px-8 flex flex-col md:flex-row justify-between">
+        <div class="flex flex-col">
+          {% if section.settings.first_menu_enable %}
+          <span class="font-bold text-gray-700 uppercase mb-2">{{ section.settings.first_title }}</span>
+          {% if linklists[footer_linklist].links.size > 0 %}
+          {%- assign first_linklist = section.settings.first_linklist -%}
+          {% for link in linklists[footer_linklist].links %}
+          <span class="my-2">
+            <a href="{{ link.url }}" class=" text-md">{{ link.title }}</a>
+          </span>
+          {% endfor %}
+          {% else %}
+          <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
+          <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
+          <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
+          {% endif %}
+          {% endif %}
         </div>
-    </div>
-    <div class="container mx-auto px-6">
-        <div class="mt-16 border-t-2 border-gray-300 flex flex-col items-center">
-            <div class="sm:w-2/3 text-center py-6">
-                <p class="text-sm font-bold mb-2">
-                    <small>&copy; {{ 'now' | date: "%Y" }}, {{ shop.name | link_to: '/' }}. {{ powered_by_link }}</small>
-                </p>
-            </div>
+        <div class="flex flex-col">
+          {% if section.settings.second_menu_enable %}
+          <span class="font-bold text-gray-700 uppercase mb-2">{{ section.settings.second_title }}</span>
+          {% if linklists[footer_linklist].links.size > 0 %}
+          {%- assign second_linklist = section.settings.second_linklist -%}
+          {% for link in linklists[footer_linklist].links %}
+          <span class="my-2">
+            <a href="{{ link.url }}" class=" text-md">{{ link.title }}</a>
+          </span>
+          {% endfor %}
+          {% else %}
+          <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
+          <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
+          <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
+          {% endif %}
+          {% endif %}
         </div>
+        <div class="flex flex-col">
+          {% if section.settings.third_menu_enable %}
+          <span class="font-bold text-gray-700 uppercase mb-2">{{ section.settings.third_title }}</span>
+          {% if linklists[footer_linklist].links.size > 0 %}
+          {%- assign third_linklist = section.settings.third_linklist -%}
+          {% for link in linklists[footer_linklist].links %}
+          <span class="my-2">
+            <a href="{{ link.url }}" class=" text-md">{{ link.title }}</a>
+          </span>
+          {% endfor %}
+          {% else %}
+          <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
+          <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
+          <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
+          {% endif %}
+          {% endif %}
+        </div>
+      </div>
     </div>
+  </div>
+  <div class="container mx-auto px-6">
+    <div class="mt-16 border-t-2 border-gray-300 flex flex-col items-center">
+      <div class="sm:w-2/3 text-center py-6">
+        <p class="text-sm font-bold mb-2">
+          <small>&copy; {{ 'now' | date: "%Y" }}, {{ shop.name | link_to: '/' }}. {{ powered_by_link }}</small>
+        </p>
+      </div>
+    </div>
+  </div>
 </footer>
 
 {% schema %}
