--- a/src/components/sections/footer/footer.liquid
+++ b/src/components/sections/footer/footer.liquid
@@ -3,55 +3,55 @@
     <div class="sm:flex sm:mt-8">
       <div class="mt-8 sm:mt-0 sm:w-full sm:px-8 flex flex-col md:flex-row justify-between">
         <div class="flex flex-col">
-          {% if section.settings.first_menu_enable %}
+          {%- if section.settings.first_menu_enable -%}
           <span class="font-bold text-gray-700 uppercase mb-2">{{ section.settings.first_title }}</span>
-          {% if linklists[footer_linklist].links.size > 0 %}
+          {%- if linklists[footer_linklist].links.size > 0 -%}
           {%- assign first_linklist = section.settings.first_linklist -%}
-          {% for link in linklists[footer_linklist].links %}
+          {%- for link in linklists[footer_linklist].links -%}
           <span class="my-2">
             <a href="{{ link.url }}" class=" text-md">{{ link.title }}</a>
           </span>
-          {% endfor %}
-          {% else %}
+          {%- endfor -%}
+          {%- else -%}
           <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
           <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
           <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
-          {% endif %}
-          {% endif %}
+          {%- endif -%}
+          {%- endif -%}
         </div>
         <div class="flex flex-col">
-          {% if section.settings.second_menu_enable %}
+          {%- if section.settings.second_menu_enable -%}
           <span class="font-bold text-gray-700 uppercase mb-2">{{ section.settings.second_title }}</span>
-          {% if linklists[footer_linklist].links.size > 0 %}
+          {%- if linklists[footer_linklist].links.size > 0 -%}
           {%- assign second_linklist = section.settings.second_linklist -%}
-          {% for link in linklists[footer_linklist].links %}
+          {%- for link in linklists[footer_linklist].links -%}
           <span class="my-2">
             <a href="{{ link.url }}" class=" text-md">{{ link.title }}</a>
           </span>
-          {% endfor %}
-          {% else %}
+          {%- endfor -%}
+          {%- else -%}
           <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
           <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
           <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
-          {% endif %}
-          {% endif %}
+          {%- endif -%}
+          {%- endif -%}
         </div>
         <div class="flex flex-col">
-          {% if section.settings.third_menu_enable %}
+          {%- if section.settings.third_menu_enable -%}
           <span class="font-bold text-gray-700 uppercase mb-2">{{ section.settings.third_title }}</span>
-          {% if linklists[footer_linklist].links.size > 0 %}
+          {%- if linklists[footer_linklist].links.size > 0 -%}
           {%- assign third_linklist = section.settings.third_linklist -%}
-          {% for link in linklists[footer_linklist].links %}
+          {%- for link in linklists[footer_linklist].links -%}
           <span class="my-2">
             <a href="{{ link.url }}" class=" text-md">{{ link.title }}</a>
           </span>
-          {% endfor %}
-          {% else %}
+          {%- endfor -%}
+          {%- else -%}
           <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
           <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
           <span class="my-2"><a href="#" class=" text-md">link 1</a></span>
-          {% endif %}
-          {% endif %}
+          {%- endif -%}
+          {%- endif -%}
         </div>
       </div>
     </div>
