Finish phase 1, html-hmr

--- a/src/components/layout/theme.liquid
+++ b/src/components/layout/theme.liquid
@@ -30,6 +30,8 @@
 
   {{ content_for_header }} <!-- Header hook for plugins -->
   {{ 'tailwind.css' | asset_url | stylesheet_tag }}
+  {{ 'bundle.runtime.js' | asset_url | script_tag }}
+  {{ 'bundle.liquidDevEntry.js' | asset_url | script_tag }}
   {{ 'bundle.theme.css' | asset_url | stylesheet_tag }}
   {{ 'bundle.theme.js' | asset_url | script_tag }}
 </head>
