--- a/src/components/layout/theme.liquid
+++ b/src/components/layout/theme.liquid
@@ -35,7 +35,7 @@
   {{ 'tailwind.min.css' | asset_url | stylesheet_tag }}
   {{ 'bundle.global-css.css' | asset_url | stylesheet_tag }}
   {{ 'bundle.runtime.js' | asset_url | script_tag }}
-  {{ 'bundle.liquidDevEntry.js' | asset_url | script_tag }}
+  {{ 'bundle.liquidDev.js' | asset_url | script_tag }}
   {{ 'bundle.theme.js' | asset_url | script_tag }}
 </head>
 <body id="{{ page_title | handle }}" class="template-{{ template.name | handle }}">
