--- a/src/components/tailwind.css
+++ b/src/components/tailwind.css
@@ -4,4 +4,4 @@
 /* purgecss end ignore */
 @tailwind utilities;
 
-/* Add Global Custom CSS Below this line */
+/* Add Custom CSS Below this line */
