--- a/src/components/templates/index.liquid
+++ b/src/components/templates/index.liquid
@@ -1,1 +1,13 @@
+<button class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded" id="testButton">TEST MODAL</button>
+
 {{ content_for_index }}
+
+<section class="test z-50">
+    {% include 'dynamic-modal', 
+    id: 'homePageTestModal',
+    openModalBtn: 'testButton',
+    title: 'Testing Title Variable',
+    body: 'Testing the Dynamic Body Of the Modal...',
+    button2: 'Button 2 Test'
+    %}
+</section>
