--- a/src/components/sections/product/product.liquid
+++ b/src/components/sections/product/product.liquid
@@ -12,33 +12,15 @@
         <p class="leading-relaxed">{{ product.content }}</p>
         <form method="post" enctype="multipart/form-data" id="AddToCartForm">
           <div class="flex mt-6 items-center">
-              <div class="flex ml-6 items-center">
-                  <span class="mr-3">Size</span>
-                  <div class="relative">
-                    <select
-                      class="rounded border appearance-none border-gray-400 py-2 focus:outline-none focus:border-red-500 text-base pl-3 pr-10"
-                      id="option2">
-                      {% for color_option in product.options_by_name['Size'].values %}
-                      <option>{{ color_option }}</option>
-                      {% endfor %}
-                    </select>
-                    <span
-                      class="absolute right-0 top-0 h-full w-10 text-center text-gray-600 pointer-events-none flex items-center justify-center">
-                      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        class="w-4 h-4" viewBox="0 0 24 24">
-                        <path d="M6 9l6 6 6-6"></path>
-                      </svg>
-                    </span>
-                  </div>
-                </div>
+            {% for option in product.options %}
             <div class="flex ml-6 items-center">
-              <span class="mr-3">Color</span>
+              <span class="mr-3">{{ option }}</span>
               <div class="relative">
                 <select
                   class="rounded border appearance-none border-gray-400 py-2 focus:outline-none focus:border-red-500 text-base pl-3 pr-10"
                   id="option1">
-                  {% for color_option in product.options_by_name['Color'].values %}
-                  <option>{{ color_option }}</option>
+                  {% for value in product.options_by_name[option].values %}
+                  <option>{{ value }}</option>
                   {% endfor %}
                 </select>
                 <span
@@ -50,6 +32,7 @@
                 </span>
               </div>
             </div>
+            {% endfor %}
           </div>
           <div class="mt-3 pb-5 border-b-2 border-gray-200 mb-5">
             {% include 'input-counter' %}
